# stricto

./: .gitignore  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  release.yml  test.yml
docs/: conf.py  requirements.txt
docs/source/: api_reference.rst  conf.py  errors.rst  index.rst  readme.rst
src/stricto/: Bool.py  Dict.py  Error.py  Float.py  GenericType.py  In.py  Int.py  List.py  String.py  TimeStamp.py  __init__.py
stricto/: __init__.py  bool.py  dict.py  error.py  event.py  extend.py  float.py  generic.py  genericType.py  in_type.py  int.py  json_encoder.py  kparse.py  list.py  list_and_tuple.py  permissions.py  rights.py  selector.py  string.py  timeStamp.py  time_stamp.py  toolbox.py  tuple.py
stricto/extended/: bytes.py  complex.py  date_time.py  free_dict.py  ip_address.py  ip_network.py
tests/: __init__.py  context.py  test_Bool.py  test_Dict.py  test_In.py  test_Int.py  test_List.py  test_String.py  test_bool.py  test_date.py  test_dict.py  test_diff.py  test_error.py  test_extend.py  test_float.py  test_in.py  test_int.py  test_ipaddress.py  test_ipnetwork.py  test_kparse.py  test_list.py  test_meta.py  test_rights.py  test_selectors.py  test_string.py  test_toolbox.py  test_tuple.py  test_view.py
