[project]
name = "stricto"
version = "0.0.6"
authors = [
  { name="Bertrand Wallrich", email="Bertrand.Wallrich@inria.fr" },
]
description = "Strict Dict (json) with schema validation embedded"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
GitHub = "https://github.com/bwallrich/stricto"
Homepage = "https://github.com/bwallrich/stricto"
Issues = "https://github.com/bwallrich/stricto/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
